--- a/CLOCK_CHAT/templates/status/status.html
+++ b/CLOCK_CHAT/templates/status/status.html
@@ -14,7 +14,7 @@
             <h2>Status</h2>
             {% if user_status %}
             <div class="my-status" onclick="window.location.href='{% url 'status_detail' user_id=user_status.user_id %}'">
-                <img src="{{user_status.status_media}}" alt="My Status">
+                <img src="{{user_status.status_media}}" alt="My Status" style=" border: 3px solid #00ffc6;">
                 <div class = "text"> </div>
                     <div class="status-info">
                     <h4>My status</h4>                
@@ -41,7 +41,11 @@
                 {% for friend in friends %}
                 <div class = "status" onclick="window.location.href='{% url 'status_detail' user_id=friend.id %}'">
                     <div style="height:50px;width:50px;object-fit:cover;">
-                    <img src ="{{friend.status_media}}" alt="media" style="height:100%;width:100%;border-radius:50%;">
+                        {% if friend.is_seen == True %}
+                            <img src ="{{friend.status_media}}" alt="media" style="height:100%;width:100%;border-radius:50%; ">
+                        {% else %}
+                            <img src ="{{friend.status_media}}" alt="media" style="height:100%;width:100%;border-radius:50%;border: 3px solid #00ffc6;">
+                        {% endif %}
                     </div>
                     <div class="info">
                         <h4 style="font-size: larger;"> {{friend.name}}</h4>
