--- a/static/css/statusview.css
+++ b/static/css/statusview.css
@@ -127,3 +127,43 @@ body {
   background-color: #666;
   border-radius: 50%;
 }
+
+  #header{
+    font-size: small;
+    background: rgb(4 152 86);
+    border-bottom: 1px solid;
+    padding: 10px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+  }
+  .viewer-modal {
+    position: absolute;
+    bottom: -100%;
+    width:100%;
+    height: 70%;
+    background-color: #ffffff;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
+    transition: bottom 0.4s ease;
+    z-index: 9999;
+  }
+  
+  .viewer-modal.show {
+    bottom: 0;
+  }
+  
+  .viewer-modal-content {
+    scrollbar-width: none;
+    padding: 10px 20px;
+    height: 60vh;
+    overflow-y: scroll;
+  }
+  
+  .close-btn {
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    float: right;
+  }
+  
